src/demo.css
.data svg text {
	fill: currentColor;
}

.data svg .domain,
.data svg .tick line {
	stroke: currentColor;
}

.dline {
	stroke-width: 0.5;
	stroke: currentColor;
}

.p90,
.p75,
.p50,
.p25,
.p10 {
	stroke-width: 2;
}

.p96,
.p97,
.p98,
.p99 {
	stroke-width: 0.2;
}

.p50 {
	stroke: #3975bf;
}

.label {
	text-anchor: start;
	transform: translate(5px, 5px);
}

.income-line {
	stroke-width: 2;
	stroke: #F00;
}

.time .x .tick:nth-last-of-type(2n-1) {
	display: none;
}

.geo .x .tick text {
	text-anchor: end;
	transform: rotate(-45deg);
}

.sex .x .tick:first-of-type text {
	text-anchor: start;
}

.sex .x .tick:last-child text {
	text-anchor: end;
}

thead th,
td {
	text-align: right;
}

td.highlight {
	background: yellow;
	font-weight: bolder;
}

